@@ -105,7 +105,7 @@ AC_CONFIG_FILES([
       src/examples/ping/Makefile 
   doc/Makefile
   tools/compile-remote-worker
-],[( cd src/include ; test -e gras || ln -s . gras )
+],[
      test -e src/base/Tests/trp_tcp_usage && chmod +x src/base/Tests/trp_tcp_usage;
      test -e src/base/Tests/trp_file_usage && chmod +x src/base/Tests/trp_file_usage;
      test -e src/base/Tests/run_tests     && chmod +x src/base/Tests/run_tests;
